@@ -1,4 +1,7 @@
 <sect1 id="config-accessibility-keyboard">
+  <abstract role="description">
+    <para> Adjusts extended keyboard capabilities to facilate use by those with additional needs.</para>
+  </abstract>
   <title>Keyboard Accessibility (AccessX)</title>
   <para></para>
 </sect1>
