@@ -21,6 +21,11 @@
 <article id="index" lang="en">
   
   <articleinfo>
+    <abstract role="description">
+      <para>
+        The GNOME Control Center provides a central place for the user to setup their GNOME experience. It can let you configure anything from the behavior of your window borders to the default font type.
+      </para>
+    </abstract>
     <title>Control Center</title>
     <authorgroup>
       <author>
