@@ -1,3 +1,11 @@
+2006-01-20  Alessandro Ferrucci <a24@umbc.edu>
+
+	Fixes #327784
+
+	* C/config-accessibility-keyboard.xml:
+	* C/control-center.xml: Update the scrollkeeper (and yelp) description
+	for control-center
+
 2005-07-27  Sebastien Bacher  <seb128@debian.org>
 
 	* C/config-accessibility-keyboard.xml:
